# pandora-cpp

./: CMakeLists.txt  main.cpp  pandora.cpp  pandora.h  pandora.kdev4  pandora.pro  resources.qrc  systemtrayicon.cpp  watcher.h
src/: application.cpp  application.h  pandora_defines.h  systemtrayicon.cpp  systemtrayicon.h  watcher.cpp
